# KHU_KongBot2

./: CMakeLists.txt  Lagrangian.m  Lagrangian.tex.md  Largrangian.ipynb  Matrix.cpp  Matrix.h  README.md  calculute_r_R.asv  calculute_r_R.m  continuos2discrete.py  hello_git.cpp  main.cpp  opencv_install.txt  pid.py  state.h  라그랑지안.ipynb
Client/: CMakeLists.txt  client.h  main.cpp
Controller_design/: LQR_method.asv  LQR_method.m  rootlocus.m  s2z.m
Dynamics Modeling/: Lagrangian.m  Largrangian.ipynb
Dynamics_Modeling/: AB_matrix_0507.asv  AB_matrix_0507.m  Jacobian_shell_live.mlx  Jacobian_speed.m  Lagrange_to_AB.py  Lagrangian.m  Largrangian.ipynb  calculute_r_R.m  lagrangetilt.py  largrangian_2d_straight.py  newton.ipynb  rootlocus.m  transformate_matrix.m
KHU_KongBot2_Arduino/: KHU_KongBot2_Arduino.ino
KHU_KongBot2_Arduino_MO_EN_TEST_/: KHU_KongBot2_Arduino_MO_EN_TEST_.ino
SRIVC/: DP_control_estY.txt  PD_control_estY.txt  PID_control_estY.txt  RefinedY.txt  SRIVC_MULTI.py  YIC_R_T2.py  final.py  totestu.txt
Sensor_Demo/: AHRS_test.cpp  Cam_test.cpp  Encoder_test.cpp  MPU6050_test.cpp  Servo_test.cpp  testCode_Guide.txt
Sensor_Demo/KF_Test/: CMakeLists.txt
Sensor_Test/: AHRS.cpp  InputThread.cpp  encoder_data.txt
Server/: CMakeLists.txt  main.cpp  serve.h  server.h  state.h
motor_test/: DATA_REFINED_servomoter.m  Mo_En_test.cpp  RefinedU.txt  RefinedY.txt  SRIVC.py  SRIVC_MULTI.py  SRIVCservomoter.m  angle.csv  moter_test data parsing.cpp  motortest.m  pos.csv  time.csv  totestY.txt  totestu.txt  vel.csv  소스.cpp
old_Ver/: Mrun.py  README.md  Srun.py  Tcpnetworks.py  client_motor_active.py  down.py  motor.py  motor_command_socket_test.py  robot.py  sensor.py  servo_class_activating.py
old_Ver/RAW_Source/: Tcpnetworks.py  client_input.py  client_input2.py  client_test.py  client_th.py  cookieClient.py  cookieServer.py  foo.h264  gyro.py  server_input.py  server_input2.py  server_test.py  server_th.py  socket_client.py  socket_client2.py  socket_server.py  socket_server3.py
old_Ver/test/: DCMotor_test.py  clasSensorTest.py  classMotorTest.py  servotest.py
sampleCode/: Encoder_angularVel.cpp  InputThread.cpp  Mo_En_test.cpp  sampleCode_Guide.md
servo_motor_test/: README.MD
servo_motor_test/KHU_KongBot2_Arduino_MO_EN_TEST/: KHU_KongBot2_Arduino_MO_EN_TEST_.ino
servo_motor_test/SRIVC/: DP_control_theta.txt  Mo_En_test.cpp  PD_control_theta.txt  PID_control_theta.txt  PI_control_estY.txt  PI_control_theta.txt  SRIVC_MULTI.py  YIC_R_T2.py  testsim.slx
servo_motor_test/util/: DATA_REFINED_servomoter.m  angle.csv  motortest.m  pos.csv  time.csv
testCode/: CMakeLists.txt  Cam_test.cpp  Encoder_test.cpp  KF_Test_SW.cpp  MPU6050_test.cpp
testCode/KF_Test/: CMakeLists.txt  KF_Test.cpp  KF_Test_SW.cpp  Matrix.h
test_code/: AHRS_ebimu.cpp  Cam.cpp  MPU6050.cpp  MPU9250.cpp  Servo_test.cpp
testsock/client/: CMakeLists.txt  client.cpp  client.h  main.cpp
testsock/server/: CMakeLists.txt  main.cpp  server.cpp  server.h
