cmake_minimum_required (VERSION 2.8)
project(KHU_KONGBOT2)
set(CMAKE_MODULE_PATH "/usr/local/lib/cmake/${CMAKE_MODULE_PATH}")
find_package(raspicam REQUIRED)
find_package(OpenCV)
find_library(wiringPi_LIB wiringPi)
IF (OpenCV_FOUND AND raspicam_CV_FOUND)
MESSAGE(STATUS "COMPILING KHU KONG BOT 2 Main")
endif()
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
add_executable (main main.cpp)

if(THREADS_HAVE_PTHREAD_ARG)
	target_compile_options(main PUBLIC "-pthread")
endif()
if(CMAKE_THREAD_LIBS_INIT)
	target_link_libraries (main "${CMAKE_THREAD_LIBS_INIT}")
endif()
target_link_libraries (main ${raspicam_CV_LIBS})
target_link_libraries(main ${wiringPi_LIB})
