cmake_minimum_required (VERSION 2.8)
project(KHU_KONGBOT2_Server)
set(CMAKE_MODULE_PATH "/usr/local/lib/cmake/${CMAKE_MODULE_PATH}")
include_directories(${PROJECT_SOURCE_DIR})
find_package(OpenCV)
IF (OpenCV_FOUND)
MESSAGE(STATUS "COMPILING KHU KONG BOT 2 Main")
endif()
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
add_executable (server main.cpp state.h server.h)

if(THREADS_HAVE_PTHREAD_ARG)
	target_compile_options(main PUBLIC "-pthread")
endif()
if(CMAKE_THREAD_LIBS_INIT)
	target_link_libraries (main "${CMAKE_THREAD_LIBS_INIT}")
endif()
