cmake_minimum_required (VERSION 2.8)
project(KHU_KONGBOT2_Client)
set(CMAKE_MODULE_PATH "/usr/local/lib/cmake/${CMAKE_MODULE_PATH}")
include_directories(${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "COMPILING KHU KONG BOT 2 Main")
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
add_executable (client main.cpp client.h client.cpp)
if(THREADS_HAVE_PTHREAD_ARG)
	target_compile_options(client PUBLIC "-pthread")
endif()
if(CMAKE_THREAD_LIBS_INIT)
	target_link_libraries (client "${CMAKE_THREAD_LIBS_INIT}")
endif()